--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <main>
         <section class="side-bar">
             <div class="logo-container">
-                <p><span class="logo">logo</span>Harry</p>
+                <img src="https://cdn.statically.io/gh/TheOdinProject/curriculum/5f37d43908ef92499e95a9b90fc3cc291a95014c/html_css/project-sign-up-form/odin-lined.png" class="logo-img"><span>Harry</span>
             </div>
         </section>
         <section class="form-container">
@@ -22,9 +22,9 @@
                 <p>You <em>know</em> you want to.</p>
             </div>
             <div class="form">
-                <p>Let's do this!</p>
                 <form action="">
                     <div class="background-pop-form">
+                        <p class="form-title">Let's do this!</p>
                         <div class="each-input">
                             <label for="first-name">FIRST NAME</label>
                             <input type="text" id="first-name" name="first-name">
@@ -52,7 +52,7 @@
                     </div>
                     <button type="submit" id="create-account-btn">Create Account</button>
                 </form>
-                <p>Already have an account? <a href="">Log in</a></p>
+                <p id="already">Already have an account? <a href="">Log in</a></p>
             </div>
         </section>
     </main>
